--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.AndroidPlaygroud" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.AndroidPlayground" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.AndroidPlaygroud" parent="Base.Theme.AndroidPlaygroud" />
+    <style name="Theme.AndroidPlayground" parent="Base.Theme.AndroidPlayground" />
 
     <style name="Theme.TransparentActivity" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
