--- a/app/src/main/res/layout/activity_lifecycle_aware.xml
+++ b/app/src/main/res/layout/activity_lifecycle_aware.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".lifecycle.ActivityTwo">
+    tools:context=".lifecycle_aware.old_method.LifecycleAwareActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
